--- a/app/src/main/res/layout/fragment_editor.xml
+++ b/app/src/main/res/layout/fragment_editor.xml
@@ -7,7 +7,30 @@
     
     <com.itsaky.androidide.views.Editor
         android:id="@+id/editor"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_weight="1.0"/>
+    
+    <HorizontalScrollView
+        android:id="@+id/diagnostic_text_container"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@color/content_background"
+        android:fillViewport="true">
+
+        <TextView
+            android:id="@+id/diagnostic_text"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textSize="12sp"
+            android:padding="8dp"
+            android:textColor="@color/primaryTextColor"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@drawable/bg_ripple"/>
+
+    </HorizontalScrollView>
     
 </LinearLayout>
