Removed unused resources

--- a/app/src/main/res/layout/activity_designer.xml
+++ b/app/src/main/res/layout/activity_designer.xml
@@ -27,6 +27,7 @@
         android:id="@+id/real_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="horizontal"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
         
     </LinearLayout>
