Created new attribute adapters Use ConstraintLayout in some layouts

--- a/app/src/main/res/layout/layout_create_project.xml
+++ b/app/src/main/res/layout/layout_create_project.xml
@@ -1,48 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/relativeLayout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
 	<ImageButton
-		android:layout_width="48dp"
-		style="?android:attr/buttonBarButtonStyle"
-		android:layout_height="48dp"
-		app:srcCompat="@drawable/ic_close"
-		android:layout_alignParentEnd="true"
-		android:layout_alignParentTop="true"
-		android:layout_margin="16dp"
-		android:background="?attr/selectableItemBackgroundBorderless"
 		android:id="@+id/createproject_close"
-		android:layout_marginBottom="16dp"/>
+		style="?android:attr/buttonBarButtonStyle"
+		android:layout_width="48dp"
+		android:layout_height="48dp"
+		android:layout_marginStart="16dp"
+		android:layout_marginTop="16dp"
+		android:layout_marginEnd="16dp"
+		android:layout_marginBottom="16dp"
+		android:background="?attr/selectableItemBackgroundBorderless"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		app:srcCompat="@drawable/ic_close" />
 
 	<TextView
-		android:layout_width="wrap_content"
+		android:id="@+id/textView"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:text="@string/new_project"
-		android:textAppearance="?android:attr/textAppearanceMedium"
-		android:textStyle="bold"
-		android:layout_toStartOf="@id/createproject_close"
-		android:layout_alignTop="@id/createproject_close"
-		android:layout_alignBottom="@id/createproject_close"
-		android:layout_alignParentStart="true"
 		android:layout_marginStart="16dp"
+		android:layout_marginEnd="16dp"
 		android:gravity="center_vertical"
 		android:singleLine="true"
+		android:text="@string/new_project"
+		android:textColor="@color/primaryTextColor"
 		android:textSize="23sp"
-		android:textColor="@color/primaryTextColor"/>
+		android:textStyle="bold"
+		app:layout_constraintTop_toBottomOf="@id/createproject_close"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toStartOf="@id/createproject_close" />
 
 	<androidx.core.widget.NestedScrollView
-		android:layout_below="@id/createproject_close"
-		android:layout_height="match_parent"
-		android:layout_width="match_parent"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		app:layout_constraintTop_toBottomOf="@id/textView"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent"
+		android:layout_marginTop="16dp"
 		android:fillViewport="true">
-		
+
 		<include
-			android:id="@+id/createProjectContent"
-			layout="@layout/layout_create_project_content"/>
-		
+			layout="@layout/layout_create_project_content">
+		</include>
+
 	</androidx.core.widget.NestedScrollView>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
