--- a/app/src/main/res/layout/layout_create_project_content.xml
+++ b/app/src/main/res/layout/layout_create_project_content.xml
@@ -1,203 +1,223 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:orientation="vertical"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/linearLayout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:paddingLeft="16dp"
-	android:paddingRight="16dp">
+	android:paddingStart="8dp"
+	android:paddingEnd="8dp">
 
 	<com.google.android.material.textfield.TextInputLayout
-		android:layout_height="wrap_content"
-		android:layout_width="match_parent"
-		android:hint="@string/project_app_name"
 		android:id="@+id/createproject_textAppName"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
 		android:layout_marginBottom="8dp"
+		android:hint="@string/project_app_name"
 		android:theme="@style/AppTheme.ProjectCreator.TextInput"
+		app:counterEnabled="true"
+		app:counterMaxLength="20"
+		app:layout_constraintBottom_toTopOf="@+id/createproject_textPackageName"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="1.0"
+		app:layout_constraintStart_toStartOf="@+id/createproject_textPackageName"
+		app:layout_constraintTop_toTopOf="parent"
 		app:startIconDrawable="@drawable/ic_android"
-		app:startIconTint="@color/primaryIconColor"
-		app:counterEnabled="true"
-		app:counterMaxLength="20">
+		app:startIconTint="@color/primaryIconColor">
 
 		<com.google.android.material.textfield.TextInputEditText
-			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
-			android:singleLine="true"
-			android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_"/>
+			android:layout_height="wrap_content"
+			android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_"
+			android:singleLine="true" />
 
 	</com.google.android.material.textfield.TextInputLayout>
 
 	<com.google.android.material.textfield.TextInputLayout
-		android:layout_height="wrap_content"
-		android:layout_width="match_parent"
-		android:hint="@string/package_name"
 		android:id="@+id/createproject_textPackageName"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
 		android:layout_marginBottom="8dp"
+		android:hint="@string/package_name"
 		android:theme="@style/AppTheme.ProjectCreator.TextInput"
-		app:startIconTint="@color/primaryIconColor"
+		app:counterEnabled="true"
+		app:counterMaxLength="40"
+		app:layout_constraintBottom_toTopOf="@+id/createproject_textMinSdk"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="@+id/createproject_textMinSdk"
+		app:layout_constraintTop_toBottomOf="@+id/createproject_textAppName"
 		app:startIconDrawable="@drawable/ic_package"
-		app:counterEnabled="true"
-		app:counterMaxLength="40">
+		app:startIconTint="@color/primaryIconColor">
 
 		<com.google.android.material.textfield.TextInputEditText
-			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
-			android:singleLine="true"
-			android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890."/>
+			android:layout_height="wrap_content"
+			android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890."
+			android:singleLine="true" />
 
 	</com.google.android.material.textfield.TextInputLayout>
 
 	<com.google.android.material.textfield.TextInputLayout
-		android:layout_height="wrap_content"
-		android:layout_width="match_parent"
-		android:hint="@string/minimum_sdk"
 		android:id="@+id/createproject_textMinSdk"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
 		android:layout_marginBottom="8dp"
+		android:hint="@string/minimum_sdk"
 		android:theme="@style/AppTheme.ProjectCreator.TextInput"
-		app:startIconTint="@color/primaryIconColor"
-		app:startIconDrawable="@drawable/ic_min_sdk"
 		app:counterEnabled="true"
-		app:counterMaxLength="2">
+		app:counterMaxLength="2"
+		app:layout_constraintBottom_toTopOf="@+id/createproject_textTargetSdk"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/createproject_textPackageName"
+		app:startIconDrawable="@drawable/ic_min_sdk"
+		app:startIconTint="@color/primaryIconColor">
 
 		<com.google.android.material.textfield.TextInputEditText
-			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
-			android:singleLine="true"
+			android:layout_height="wrap_content"
 			android:digits="1234567890"
-			android:inputType="number"/>
+			android:inputType="number"
+			android:singleLine="true" />
 
 	</com.google.android.material.textfield.TextInputLayout>
 
 	<com.google.android.material.textfield.TextInputLayout
-		android:layout_height="wrap_content"
-		android:layout_width="match_parent"
-		android:hint="@string/target_sdk"
 		android:id="@+id/createproject_textTargetSdk"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
 		android:layout_marginBottom="16dp"
+		android:hint="@string/target_sdk"
 		android:theme="@style/AppTheme.ProjectCreator.TextInput"
-		app:startIconTint="@color/primaryIconColor"
-		app:startIconDrawable="@drawable/ic_target_sdk"
 		app:counterEnabled="true"
-		app:counterMaxLength="2">
+		app:counterMaxLength="2"
+		app:layout_constraintBottom_toTopOf="@+id/createproject_templateImage"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/createproject_textMinSdk"
+		app:startIconDrawable="@drawable/ic_target_sdk"
+		app:startIconTint="@color/primaryIconColor">
 
 		<com.google.android.material.textfield.TextInputEditText
-			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
-			android:singleLine="true"
+			android:layout_height="wrap_content"
 			android:digits="1234567890"
-			android:inputType="number"/>
+			android:inputType="number"
+			android:singleLine="true" />
 
 	</com.google.android.material.textfield.TextInputLayout>
 
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="250dp"
-		android:orientation="horizontal"
-		android:weightSum="2.0">
 
-		<LinearLayout
-			android:orientation="vertical"
-			android:layout_width="0dp"
-			android:layout_height="match_parent"
-			android:layout_weight="1.0"
-			android:padding="16dp">
-
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:id="@+id/createproject_templateLabel"
-				android:text="@string/template_empty"
-				android:textStyle="bold"
-				android:singleLine="true"
-				android:layout_marginBottom="8dp"
-				android:textColor="@color/secondaryColor"/>
-
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="0dp"
-				android:textAppearance="?android:attr/textAppearanceSmall"
-				android:id="@+id/createproject_templateDescription"
-				android:layout_weight="1.0"
-				android:textColor="@color/secondaryTextColor"/>
-
-			<LinearLayout
-				android:layout_height="wrap_content"
-				android:layout_width="match_parent"
-				android:orientation="horizontal"
-				android:gravity="center">
-
-				<com.google.android.material.card.MaterialCardView
-					android:id="@+id/previousCard"
-					android:layout_height="50dp"
-					android:layout_width="50dp"
-					android:clickable="true"
-					android:focusable="true"
-					android:foreground="?attr/selectableItemBackgroundBorderless"
-					android:descendantFocusability="blocksDescendants"
-					android:layout_marginEnd="16dp"
-					app:cardBackgroundColor="@android:color/transparent"
-					app:cardCornerRadius="50dp"
-					app:cardElevation="0dp"
-					app:strokeColor="@color/secondaryColor"
-					app:strokeWidth="0.75dp">
-
-					<ImageView
-						android:layout_height="match_parent"
-						android:layout_width="match_parent"
-						android:id="@+id/createproject_previousTemplate"
-						android:scaleType="fitCenter"
-						android:padding="10dp"
-						app:srcCompat="@drawable/ic_chevron_left"/>
-
-				</com.google.android.material.card.MaterialCardView>
-
-				<com.google.android.material.card.MaterialCardView
-					android:id="@+id/nextCard"
-					android:layout_height="50dp"
-					android:layout_width="50dp"
-					android:clickable="true"
-					android:focusable="true"
-					android:foreground="?attr/selectableItemBackgroundBorderless"
-					android:descendantFocusability="blocksDescendants"
-					app:cardBackgroundColor="@android:color/transparent"
-					app:cardCornerRadius="50dp"
-					app:cardElevation="0dp"
-					app:strokeColor="@color/secondaryColor"
-					app:strokeWidth="0.75dp"
-					android:layout_marginStart="16dp">
-
-					<ImageView
-						android:layout_height="match_parent"
-						android:layout_width="match_parent"
-						android:id="@+id/createproject_nextTemplate"
-						android:scaleType="fitCenter"
-						android:padding="10dp"
-						app:srcCompat="@drawable/ic_chevron_right"/>
-
-				</com.google.android.material.card.MaterialCardView>
-
-			</LinearLayout>
-
-		</LinearLayout>
-
-		<ImageView
-			android:id="@+id/createproject_templateImage"
-			android:layout_height="match_parent"
-			android:layout_width="0dp"
-			android:scaleType="fitCenter"
-			android:layout_weight="1.0"/>
-
-	</LinearLayout>
-
-	<Button
+	<TextView
+		android:id="@+id/createproject_templateLabel"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/create_project"
-		android:layout_margin="16dp"
-		android:layout_gravity="center_horizontal"
-		android:textColor="@color/primaryTextColor"
-		android:id="@+id/createproject_create"/>
+		android:layout_marginStart="48dp"
+		android:layout_marginEnd="62dp"
+		android:layout_marginBottom="8dp"
+		android:singleLine="true"
+		android:text="@string/template_empty"
+		android:textColor="@color/secondaryColor"
+		android:textStyle="bold"
+		app:layout_constraintBottom_toTopOf="@+id/createproject_templateDescription"
+		app:layout_constraintEnd_toStartOf="@+id/createproject_templateImage"
+		app:layout_constraintStart_toStartOf="parent" />
 
-</LinearLayout>
+	<TextView
+		android:id="@+id/createproject_templateDescription"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:layout_marginStart="48dp"
+		android:layout_marginEnd="16dp"
+		android:textColor="@color/secondaryTextColor"
+		app:layout_constraintBottom_toTopOf="@+id/previousCard"
+		app:layout_constraintEnd_toStartOf="@+id/createproject_templateImage"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/createproject_templateImage" />
+
+
+	<com.google.android.material.card.MaterialCardView
+		android:id="@+id/previousCard"
+		android:layout_width="48dp"
+		android:layout_height="48dp"
+		android:layout_marginStart="48dp"
+		android:layout_marginEnd="32dp"
+		android:layout_marginBottom="32dp"
+		android:clickable="true"
+		android:descendantFocusability="blocksDescendants"
+		android:focusable="true"
+		android:foreground="?attr/selectableItemBackgroundBorderless"
+		app:cardBackgroundColor="@android:color/transparent"
+		app:cardCornerRadius="50dp"
+		app:cardElevation="0dp"
+		app:layout_constraintBottom_toTopOf="@+id/createproject_create"
+		app:layout_constraintEnd_toStartOf="@+id/nextCard"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/createproject_templateDescription"
+		app:strokeColor="@color/secondaryColor"
+		app:strokeWidth="0.75dp">
+
+		<ImageView
+			android:id="@+id/createproject_previousTemplate"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:padding="10dp"
+			android:scaleType="fitCenter"
+			app:srcCompat="@drawable/ic_chevron_left" />
+
+	</com.google.android.material.card.MaterialCardView>
+
+	<com.google.android.material.card.MaterialCardView
+		android:id="@+id/nextCard"
+		android:layout_width="48dp"
+		android:layout_height="48dp"
+		android:layout_marginEnd="180dp"
+		android:clickable="true"
+		android:descendantFocusability="blocksDescendants"
+		android:focusable="true"
+		android:foreground="?attr/selectableItemBackgroundBorderless"
+		app:cardBackgroundColor="@android:color/transparent"
+		app:cardCornerRadius="50dp"
+		app:cardElevation="0dp"
+		app:layout_constraintBottom_toBottomOf="@+id/previousCard"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toEndOf="@+id/previousCard"
+		app:layout_constraintTop_toBottomOf="@+id/createproject_templateDescription"
+		app:strokeColor="@color/secondaryColor"
+		app:strokeWidth="0.75dp">
+
+		<ImageView
+			android:id="@+id/createproject_nextTemplate"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:padding="10dp"
+			android:scaleType="fitCenter"
+			app:srcCompat="@drawable/ic_chevron_right" />
+
+	</com.google.android.material.card.MaterialCardView>
+
+
+	<ImageView
+		android:id="@+id/createproject_templateImage"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:scaleType="fitCenter"
+		app:layout_constraintBottom_toTopOf="@+id/createproject_templateDescription"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toEndOf="@+id/createproject_templateDescription"
+		app:layout_constraintTop_toBottomOf="@+id/createproject_textTargetSdk" />
+
+
+	<Button
+		android:id="@+id/createproject_create"
+		android:layout_width="wrap_content"
+		android:layout_height="0dp"
+		android:layout_marginBottom="16dp"
+		android:text="@string/create_project"
+		android:textColor="@color/primaryTextColor"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/previousCard" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
