Added basic drag and drop in UI Designer

--- a/app/src/main/res/drawable/bg_widget_group_selected.xml
+++ b/app/src/main/res/drawable/bg_widget_group_selected.xml
@@ -20,7 +20,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@android:color/black"
+        android:color="@color/bg_widget_selected"
         />
 
     <corners
