--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <color name="diagnostic_warning">@color/log_warning</color>
 	<color name="content_background">#212121</color>
 	<color name="bg_green">#4CAF50</color>
+	<color name="bg_widget_selected">#212121</color>
 	<color name="transform_scrim">#70000000</color>
     
     <color name="textActionNameColor">@android:color/tertiary_text_light</color>
