--- a/app/src/main/res/layout/activity_designer.xml
+++ b/app/src/main/res/layout/activity_designer.xml
@@ -30,6 +30,7 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
@@ -45,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:background="@drawable/bg_design_container_background"/>
+                android:background="@drawable/bg_design_container_background" />
 
         </androidx.core.widget.NestedScrollView>
 
