--- a/app/src/main/res/layout/activity_designer.xml
+++ b/app/src/main/res/layout/activity_designer.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    tools:context=".DesignerActivity">
+    tools:context=".DesignerActivity"
+    tools:openDrawer="start">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/main_container"
@@ -54,12 +55,13 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true">
 
         <LinearLayout
+            android:id="@+id/navigation_contents"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
