Moved attribute editor to bottom sheet dialog

--- a/app/src/main/res/layout/layout_projects_item.xml
+++ b/app/src/main/res/layout/layout_projects_item.xml
@@ -76,7 +76,7 @@
 
 			<ImageView
                 tools:ignore="UnusedAttribute"
-				app:srcCompat="@drawable/ic_file_delete"
+				app:srcCompat="@drawable/ic_delete"
 				android:layout_width="50dp"
 				android:layout_height="match_parent"
 				android:layout_marginEnd="8dp"
