--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -1,3 +1,4 @@
 <resources>
     <color name="color_toast_background">#90424242</color>
+    <color name="color_picker_default_color">#f44336</color>
 </resources>
