--- a/app/src/main/res/xml/motion_about.xml
+++ b/app/src/main/res/xml/motion_about.xml
@@ -28,8 +28,7 @@
 
     
     
-    <ConstraintSet
-        android:id="@+id/start">
+    <ConstraintSet>
         
         <Constraint
             app:layout_constraintStart_toStartOf="parent"
