--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -8,24 +8,22 @@
 	android:id="@+id/editor_drawerLayout"
 	android:animateLayoutChanges="true">
 	
-	<androidx.constraintlayout.widget.ConstraintLayout
+	<androidx.coordinatorlayout.widget.CoordinatorLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:id="@+id/realContainer">
-		
+
 		<com.google.android.material.appbar.AppBarLayout
-			android:layout_width="0dp"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:elevation="8dp"
 			android:id="@+id/editor_appBarLayout"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent">
+			app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
 
 			<com.google.android.material.appbar.MaterialToolbar
 				android:layout_height="wrap_content"
 				android:layout_width="match_parent"
 				android:background="@color/primaryDarkColor"
+				android:elevation="10dp"
 				android:id="@+id/editor_toolbar"/>
             
             <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -56,313 +54,20 @@
 				app:tabGravity="fill"/>
 
 		</com.google.android.material.appbar.AppBarLayout>
-		
-		<LinearLayout
-			android:orientation="vertical"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			android:id="@+id/fragContainer"
-			app:layout_constraintTop_toBottomOf="@id/editor_appBarLayout"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent">
 
-			<com.itsaky.androidide.views.NonSwipableViewPager
-				android:id="@+id/editor_viewPager"
-				android:layout_height="0dp"
-				android:layout_width="match_parent"
-				android:layout_weight="1.0"
-				android:background="@color/content_background"/>
+		<com.itsaky.androidide.views.NonSwipableViewPager
+			android:id="@+id/editor_viewPager"
+			android:layout_height="match_parent"
+			android:layout_width="match_parent"
+			android:layout_weight="1.0"
+			android:background="@color/content_background"
+			app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
 
-			<LinearLayout
-                android:id="@+id/input_container"
-				android:layout_height="wrap_content"
-				android:layout_width="match_parent"
-				android:orientation="vertical">
-                
-				<TextView
-					android:id="@+id/editor_statusText"
-					android:layout_height="wrap_content"
-					android:layout_width="match_parent"
-					android:gravity="center"
-					android:textSize="14sp"
-					android:background="@android:color/black"
-					android:textColor="@color/primaryTextColor"
-					android:singleLine="true"/>
+		<include
+			android:id="@+id/bottom_sheet"
+			layout="@layout/layout_editor_bottom_sheet"/>
 
-			</LinearLayout>
-
-		</LinearLayout>
-
-		<FrameLayout
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			android:id="@+id/transformScrim"
-			android:background="@color/transform_scrim"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"/>
-
-		<com.google.android.material.card.MaterialCardView
-			android:id="@+id/viewOptionsCard"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="16dp"
-			android:layout_marginBottom="24dp"
-			android:layout_marginStart="16dp"
-			android:layout_marginEnd="16dp"
-			app:cardElevation="8dp"
-			app:cardCornerRadius="8dp"
-			app:cardBackgroundColor="@color/primaryLightColor"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent">
-
-			<LinearLayout
-				android:orientation="vertical"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content">
-
-				<com.google.android.material.button.MaterialButton
-					style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-					android:id="@+id/view_buildOut"
-					android:layout_width="match_parent"
-					android:layout_height="52dp"
-					android:gravity="start|center_vertical"
-					android:insetTop="0dp"
-					android:insetBottom="0dp"
-					android:text="@string/build_output"
-					android:layout_marginBottom="1dp"
-					android:textColor="@color/primaryTextColor"
-					app:iconTint="@color/primaryIconColor"
-					app:cornerRadius="0dp"
-					app:icon="@drawable/ic_build_output"
-					app:backgroundTint="@color/primaryColor"
-					app:rippleColor="@color/rippleHighlightColor_light"/>
-                
-                <com.google.android.material.button.MaterialButton
-                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-                    android:id="@+id/view_diags"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:gravity="start|center_vertical"
-                    android:insetTop="0dp"
-                    android:insetBottom="0dp"
-                    android:text="@string/view_diags"
-                    android:layout_marginBottom="1dp"
-                    android:textColor="@color/primaryTextColor"
-                    app:iconTint="@color/primaryIconColor"
-                    app:cornerRadius="0dp"
-                    app:icon="@drawable/ic_diagnostics"
-                    app:backgroundTint="@color/primaryColor"
-					app:rippleColor="@color/rippleHighlightColor_light"/>
-                
-                <com.google.android.material.button.MaterialButton
-                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-                    android:id="@+id/view_search_results"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:gravity="start|center_vertical"
-                    android:insetTop="0dp"
-                    android:insetBottom="0dp"
-                    android:text="@string/view_search_results"
-                    android:layout_marginBottom="1dp"
-                    android:textColor="@color/primaryTextColor"
-                    app:iconTint="@color/primaryIconColor"
-                    app:cornerRadius="0dp"
-                    app:icon="@drawable/ic_search"
-                    app:backgroundTint="@color/primaryColor"
-					app:rippleColor="@color/rippleHighlightColor_light"/>
-
-				<com.google.android.material.button.MaterialButton
-					style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-					android:id="@+id/view_logs"
-					android:layout_width="match_parent"
-					android:layout_height="52dp"
-					android:gravity="start|center_vertical"
-					android:insetTop="0dp"
-					android:insetBottom="0dp"
-					android:text="@string/logs"
-					android:layout_marginBottom="1dp"
-					android:textColor="@color/primaryTextColor"
-					app:iconTint="@color/primaryIconColor"
-					app:cornerRadius="0dp"
-					app:icon="@drawable/ic_log"
-					app:backgroundTint="@color/primaryColor"
-					app:rippleColor="@color/rippleHighlightColor_light"/>
-
-				<com.google.android.material.button.MaterialButton
-					style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-					android:id="@+id/view_files"
-					android:layout_width="match_parent"
-					android:layout_height="52dp"
-					android:gravity="start|center_vertical"
-					android:insetTop="0dp"
-					android:insetBottom="0dp"
-					android:text="@string/show_files"
-					android:layout_marginBottom="1dp"
-					android:textColor="@color/primaryTextColor"
-					app:iconTint="@color/primaryIconColor"
-					app:cornerRadius="0dp"
-					app:icon="@drawable/ic_folder"
-					app:backgroundTint="@color/primaryColor"
-					app:rippleColor="@color/rippleHighlightColor_light"/>
-
-				<com.google.android.material.button.MaterialButton
-					style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-					android:id="@+id/view_daemonStatus"
-					android:layout_width="match_parent"
-					android:layout_height="52dp"
-					android:gravity="start|center_vertical"
-					android:insetTop="0dp"
-					android:insetBottom="0dp"
-					android:text="@string/gradle_daemon_status"
-					android:textColor="@color/primaryTextColor"
-					app:iconTint="@color/primaryIconColor"
-					app:cornerRadius="0dp"
-					app:icon="@drawable/ic_info"
-					app:backgroundTint="@color/primaryColor"
-					app:rippleColor="@color/rippleHighlightColor_light"/>
-
-			</LinearLayout>
-
-		</com.google.android.material.card.MaterialCardView>
-
-		<LinearLayout
-			android:orientation="vertical"
-			android:id="@+id/buildContainer"
-			android:visibility="gone"
-			android:background="@color/primaryDarkColor"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent">
-
-			<com.google.android.material.appbar.MaterialToolbar
-				android:layout_height="56dp"
-				android:layout_width="match_parent"
-				android:id="@+id/buildOutToolbar"
-				android:elevation="8dp"
-				android:background="@color/primaryDarkColor"
-				app:title="@string/build_output"
-				app:navigationIcon="@drawable/ic_chevron_down"
-				app:navigationIconTint="@color/primaryIconColor"/>
-
-			<LinearLayout
-				android:orientation="vertical"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:id="@+id/buildOutcontainer"/>
-
-		</LinearLayout>
-		
-		<LinearLayout
-			android:orientation="vertical"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			android:id="@+id/logContainer"
-			android:visibility="gone"
-			android:background="@color/primaryDarkColor"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent">
-
-			<com.google.android.material.appbar.MaterialToolbar
-				android:layout_height="56dp"
-				android:layout_width="match_parent"
-				android:id="@+id/logOutToolbar"
-				android:elevation="8dp"
-				android:background="@color/primaryDarkColor"
-				app:title="@string/logs"
-				app:navigationIcon="@drawable/ic_chevron_down"
-				app:navigationIconTint="@color/primaryIconColor"/>
-
-			<LinearLayout
-				android:orientation="vertical"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:id="@+id/logOutcontainer"/>
-
-		</LinearLayout>
-        
-        <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/diagContainer"
-            android:visibility="gone"
-            android:background="@color/primaryDarkColor"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:layout_height="56dp"
-                android:layout_width="match_parent"
-                android:id="@+id/diagToolbar"
-                android:elevation="8dp"
-                android:background="@color/primaryDarkColor"
-                app:title="@string/view_diags"
-                app:navigationIcon="@drawable/ic_chevron_down"
-                app:navigationIconTint="@color/primaryIconColor"/>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/diagListContainer">
-                
-                <com.itsaky.androidide.views.EmptyView
-                    android:id="@+id/diagEmptyView"
-                    android:layout_height="match_parent"
-                    android:layout_width="match_parent"/>
-                
-            </LinearLayout>
-
-        </LinearLayout>
-        
-        <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/searchResultsContainer"
-            android:visibility="gone"
-            android:background="@color/primaryDarkColor"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:layout_height="56dp"
-                android:layout_width="match_parent"
-                android:id="@+id/searchResultsToolbar"
-                android:elevation="8dp"
-                android:background="@color/primaryDarkColor"
-                app:title="@string/view_search_results"
-                app:navigationIcon="@drawable/ic_chevron_down"
-                app:navigationIconTint="@color/primaryIconColor"/>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/searchResultsListContainer">
-                
-                <com.itsaky.androidide.views.EmptyView
-                    android:id="@+id/searchEmptyView"
-                    android:layout_height="match_parent"
-                    android:layout_width="match_parent"/>
-                
-            </LinearLayout>
-
-        </LinearLayout>
-        
-        <TextView
+		<TextView
             android:id="@+id/symbolText"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
@@ -382,23 +87,7 @@
             android:id="@+id/diagnosticInfo"
             layout="@layout/layout_diagnostic_info"/>
 
-		<com.google.android.material.floatingactionbutton.FloatingActionButton
-			android:id="@+id/fab_view"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginStart="16dp"
-			android:layout_marginTop="16dp"
-			android:layout_marginEnd="16dp"
-			android:layout_marginBottom="24dp"
-			android:visibility="visible"
-			app:backgroundTint="@color/secondaryColor"
-			app:fabSize="normal"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:srcCompat="@drawable/ic_view"
-			app:tint="@color/primaryTextColor"/>
-
-	</androidx.constraintlayout.widget.ConstraintLayout>
+	</androidx.coordinatorlayout.widget.CoordinatorLayout>
 	
 	<com.google.android.material.navigation.NavigationView
 		android:id="@+id/startNav"
