--- a/app/src/main/res/layout/layout_diagnostic_info.xml
+++ b/app/src/main/res/layout/layout_diagnostic_info.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/msg"
     android:padding="8dp"
     android:textColor="@color/primaryTextColor"
     android:textSize="11sp"
-    android:textIsSelectable="true"/>
+    android:textIsSelectable="true" />
