Fix: Bottom sheet not expandable if there are any files opened

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -59,8 +59,9 @@
 			android:id="@+id/editor_viewPager"
 			android:layout_height="match_parent"
 			android:layout_width="match_parent"
-			android:layout_weight="1.0"
 			android:background="@color/content_background"
+			android:layout_gravity="top"
+			android:layout_marginBottom="@dimen/editor_sheet_peek_height"
 			app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
 
 		<include
