--- a/app/src/main/res/layout/layout_editor_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_editor_bottom_sheet.xml
@@ -23,7 +23,7 @@
     android:orientation="vertical"
     android:elevation="8dp"
     app:behavior_hideable="false"
-    app:behavior_peekHeight="40dp"
+    app:behavior_peekHeight="@dimen/editor_sheet_peek_height"
     app:layout_behavior="com.itsaky.androidide.utils.EditorBottomSheetBehavior">
 
     <LinearLayout
