--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="file_tab_height">36dp</dimen>
+    <dimen name="editor_sheet_peek_height">40dp</dimen>
 </resources>
