Use ViewFlipper instead of ViewPager2 for editor fragments

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -45,21 +45,24 @@
 				android:layout_width="match_parent"
 				android:layout_height="@dimen/file_tab_height"
 				android:background="@color/primaryDarkColor"
-                app:tabIndicatorColor="@color/secondaryColor"
-                app:tabIndicatorGravity="stretch"
-				app:tabIndicatorHeight="@dimen/file_tab_height"
-                app:tabTextAppearance="@style/AppTheme.TabLayout.Title"
-                app:tabSelectedTextColor="@color/primaryTextColor"
-				app:tabMode="scrollable" />
+				app:tabGravity="start"
+				app:tabIndicatorAnimationMode="elastic"
+				app:tabIndicatorColor="@color/secondaryColor"
+				app:tabIndicatorFullWidth="false"
+				app:tabIndicatorGravity="bottom"
+				app:tabIndicatorHeight="4dp"
+				app:tabMode="scrollable"
+				app:tabSelectedTextColor="@color/secondaryColor"
+				app:tabTextAppearance="@style/AppTheme.TabLayout.Title"
+				app:tabTextColor="@color/secondaryTextColor_light" />
 
 		</com.google.android.material.appbar.AppBarLayout>
 
-		<androidx.viewpager2.widget.ViewPager2
-			android:id="@+id/editor_viewPager"
+		<ViewFlipper
+			android:id="@+id/editor_container"
 			android:layout_height="match_parent"
 			android:layout_width="match_parent"
 			android:background="@color/content_background"
-			android:layout_gravity="top"
 			android:layout_marginBottom="@dimen/editor_sheet_peek_height"
 			app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
 
