Added daemon status option in options menu

--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -153,4 +153,9 @@
                 app:showAsAction="never"/>
         </menu>
     </item>
+	<item
+		android:id="@+id/menuEditor_daemonStatus"
+		android:icon="@drawable/ic_info"
+		android:title="@string/gradle_daemon_status"
+		app:showAsAction="ifRoom"/>
 </menu>
