--- a/app/src/main/res/layout/layout_completion_item.xml
+++ b/app/src/main/res/layout/layout_completion_item.xml
@@ -1,80 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	tools:ignore="SmallSp"
+	android:id="@+id/relativeLayout2"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	android:background="@color/primaryLightColor"
 	android:gravity="center_vertical"
-	android:background="@color/primaryLightColor">
+	tools:ignore="SmallSp">
 
 	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
 		android:id="@+id/completion_type"
-		android:textColor="@color/primaryTextColorLight"
-		android:textSize="11sp"
-		android:gravity="center_vertical"
-		android:singleLine="true"
-		android:layout_alignParentEnd="true"
-		android:ellipsize="start"
-		android:layout_marginTop="2dp"
-		android:layout_marginEnd="4dp"/>
-
-	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:textSize="13sp"
-		android:id="@+id/completion_label"
-		android:textStyle="bold"
-		android:layout_marginEnd="4dp"
-		android:textColor="@color/primaryTextColor"
-		android:gravity="center_vertical"
-		android:layout_toStartOf="@id/completion_type"
-		android:ellipsize="end"
-		android:layout_toEndOf="@id/completion_iconText"
 		android:layout_marginTop="2dp"
-		android:singleLine="true"/>
-
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_below="@id/completion_label"
-		android:id="@+id/completion_detail"
+		android:layout_marginEnd="4dp"
+		android:ellipsize="start"
+		android:gravity="center_vertical"
+		android:singleLine="true"
 		android:textColor="@color/primaryTextColorLight"
 		android:textSize="11sp"
-		android:gravity="center_vertical"
-		android:ellipsize="end"
-		android:singleLine="true"
-		android:layout_toEndOf="@id/completion_iconText"
-		android:layout_marginEnd="4dp"/>
-    
-    
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/completion_detail"
-        android:id="@+id/completion_api_info"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="11sp"
-        android:gravity="center_vertical"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:layout_toEndOf="@id/completion_iconText"
-        android:layout_marginBottom="2dp"
-		android:layout_marginEnd="4dp"/>
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
 	<TextView
-		android:layout_width="30dp"
-		android:layout_height="match_parent"
-		android:layout_marginEnd="8dp"
+		android:id="@+id/completion_label"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="4dp"
+		android:layout_marginTop="2dp"
+		android:layout_marginEnd="4dp"
+		android:ellipsize="end"
+		android:gravity="center_vertical"
+		android:singleLine="true"
+		android:textColor="@color/primaryTextColor"
+		android:textSize="13sp"
+		android:textStyle="bold"
+		app:layout_constraintEnd_toStartOf="@id/completion_type"
+		app:layout_constraintStart_toEndOf="@id/completion_iconText"
+		app:layout_constraintTop_toTopOf="parent" />
+	
+	<TextView
+		android:id="@+id/completion_detail"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:ellipsize="end"
+		android:gravity="center_vertical"
+		android:singleLine="true"
+		android:textColor="@color/primaryTextColorLight"
+		android:textSize="11sp"
+		android:layout_marginStart="4dp"
+		app:layout_constraintStart_toEndOf="@+id/completion_iconText"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/completion_label" />
+
+
+	<TextView
+		android:id="@+id/completion_api_info"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="4dp"
+		android:layout_marginEnd="4dp"
+		android:layout_marginBottom="2dp"
+		android:ellipsize="end"
+		android:gravity="center_vertical"
+		android:singleLine="true"
+		android:textColor="@color/primaryTextColor"
+		android:textSize="11sp"
+		app:layout_constraintStart_toEndOf="@id/completion_iconText"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/completion_detail" />
+
+	<TextView
 		android:id="@+id/completion_iconText"
+		android:layout_width="30dp"
+		android:layout_height="0dp"
+		android:layout_marginEnd="8dp"
 		android:background="@color/secondaryColor"
 		android:gravity="center"
-		android:textSize="14sp"
 		android:textColor="@color/primaryTextColor"
-		android:layout_alignParentTop="true"
-		android:layout_alignParentBottom="true"/>
+		android:textSize="14sp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
